# AlgoritmoTB

FuentesBouma/: ArchivoConfig.txt  BinaryFilters.cpp  BinaryFilters.h  Bouma.cpp  BoumaMethods.cpp  BoumaMethods.h  CMakeLists.txt  Configuracion.cpp  Configuracion.h  DICOMIOManage.cpp  DICOMIOManage.h  DICOMProperties.cpp  DICOMProperties.h  ImageFilters.cpp  ImageFilters.h  ImageProcessingUtils.cpp  ImageProcessingUtils.h  VTKVisualization.cpp  VTKVisualization.h
